# tryhcs-platform

./: .gitignore  Cargo.toml  makefile  requests.http
tryhcs-commons-be/: Cargo.toml
tryhcs-commons-be/assets/tests/: base64_file.txt
tryhcs-commons-be/src/: api_response.rs  auth.rs  data_encryption.rs  encryption_context.rs  env.rs  file_upload.rs  lib.rs  redis.rs  utils.rs
tryhcs-commons-be/tests/: data_encryption.rs
tryhcs-compliance-be/: Cargo.toml
tryhcs-compliance-be/migrations/: init.sql
tryhcs-compliance-be/src/: api.rs  app.rs  endpoints.rs  lib.rs  models.rs  params.rs  repo.rs
tryhcs-compliance-be/src/integrations/: mod.rs  youverify.rs
tryhcs-customers-be/: Cargo.toml
tryhcs-customers-be/assets/templates/: email_otp.html
tryhcs-customers-be/migrations/: init.sql
tryhcs-customers-be/src/: api.rs  app.rs  db_models.rs  db_repo.rs  endpoint.rs  lib.rs  params.rs
tryhcs-derive-be/: Cargo.toml  doc.md
tryhcs-derive-be/src/: lib.rs
tryhcs-notifications-be/: Cargo.toml
tryhcs-notifications-be/src/: lib.rs
tryhcs-notifications-be/src/integrations/: mod.rs  sendchamp.rs  smtp_email.rs
tryhcs-personnel-be/: Cargo.toml
tryhcs-personnel-be/src/: lib.rs
tryhcs-platform/: Cargo.toml
tryhcs-platform/src/: main.rs
tryhcs_app/: Cargo.toml  artificats.txt
tryhcs_app/src/: app.rs  core.rs  hcs_api.rs  hcs_endpoints.rs  lib.rs  storage.rs  utils.rs  wasm.rs
tryhcs_app/src/state_engine/: authorized_states.rs  global_state.rs  mod.rs  unauthorized_states.rs
tryhcs_app/tests/: guest_operations.rs  mod.rs
tryhcs_shared/: Cargo.toml
tryhcs_shared/src/: api_params.rs  compliance_params.rs  encryption.rs  finance_params.rs  institution_params.rs  lib.rs  records_param.rs
