[workspace]
members = [
    "tryhcs_shared",
    "tryhcs_app",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bon = "3.3"
schemars = "0.8.21"
eyre = "0.6.12"
futures = "0.3.31"
base64 = "0.22.1"
async-trait = "0.1.88"
chrono-humanize = "0.2.3"
either = "1.13.0"
reqwest = { version = "0.12.4", features = ["json"] }
derive_more = { version = "2", features = ["full"] }

