[package]
name = "tryhcs-commons-be"
version = "0.0.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
bon.workspace = true
schemars.workspace = true
eyre.workspace = true
futures.workspace = true
either.workspace = true
derive_more.workspace = true
async-trait.workspace = true
tryhcs_shared = {path = "../tryhcs_shared"}
tracing.workspace = true
reqwest = { version = "0.12.15", features = [] }
bytes = "1.9.0"
phonenumber = "0.3.5"
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "=0.5.0"
rand = "0.8.5"
redis = { version = "0.25.3", features = ["tokio-comp"] }
lettre = "0.11.13"
base64 = "0.22.1"
aes-gcm = "0.10.3"
aes-gcm-siv = "0.11.1"
tryhcs-derive-be = {path = "../tryhcs-derive-be"}


[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = "0.3.0"