[package]
name = "tryhcs-personnel-be"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8",  features = [
    "runtime-tokio",
    "postgres",
    "json",
    "rust_decimal",
    "chrono",
    "uuid",
] }
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
bon.workspace = true
schemars.workspace = true
eyre.workspace = true
futures.workspace = true
either.workspace = true
derive_more.workspace = true
async-trait.workspace = true
tryhcs_shared = {path = "../tryhcs_shared"}
tracing.workspace = true
reqwest = { version = "0.12.15", features = [] }
bytes = "1.9.0"
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "=0.5.0"
rand = "0.8.5"
redis = { version = "0.25.3", features = ["tokio-comp"] }
scrypt = "0.11.0"
phonenumber = "0.3.5"
tryhcs-commons-be = {path = "../tryhcs-commons-be"}
uuid = { version = "1.1", features = ["serde", "v4"] }

tryhcs-derive-be = {path = "../tryhcs-derive-be"}



