[package]
name = "tryhcs-notifications-be"
version = "0.0.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
bon.workspace = true
eyre.workspace = true
futures.workspace = true
either.workspace = true
derive_more.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest = { version = "0.12.15", features = [] }
phonenumber = "0.3.5"
tryhcs-commons-be = {path = "../tryhcs-commons-be"}
uuid = { version = "1.1", features = ["serde", "v4"] }
lettre = "0.11.13"
envy = "0.4"
dotenv = "0.15.0"
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber.workspace = true
mime = "0.3.17"
