[package]
name = "tryhcs-platform"
version = "0.0.0"
edition = "2021"

[dependencies]
tryhcs_shared = {path = "../tryhcs_shared"}
tryhcs-commons-be = {path = "../tryhcs-commons-be"}
tryhcs-notifications-be = {path = "../tryhcs-notifications-be"}
tryhcs-customers-be = {path = "../tryhcs-customers-be"}
tryhcs-compliance-be = {path = "../tryhcs-compliance-be"}

tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8",  features = [
    "runtime-tokio",
    "postgres",
    "json",
    "rust_decimal",
    "chrono",
    "uuid",
] }
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
bon.workspace = true
schemars.workspace = true
eyre.workspace = true
futures.workspace = true
either.workspace = true
derive_more.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest = { version = "0.12.15", features = [] }
bytes = "1.9.0"
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "=0.5.0"
rand = "0.8.5"
redis = { version = "0.25.3", features = ["tokio-comp"] }
scrypt = "0.11.0"
phonenumber = "0.3.5"
uuid = { version = "1.1", features = ["serde", "v4"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.68.0"
mime = "0.3.17"
tracing-subscriber = "0.3.0"

tower = { version = "0.5.1", features = ["retry", "timeout"] }
tower-http = {version = "0.6.2", features=["cors"]}
tokio-cron-scheduler = "0.13.0"
tracing-appender = "0.2.3"
envy = "0.4"
dotenvy = "0.15.7"
