[package]
name = "tryhcs_app"
version = "0.0.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
bon.workspace = true
schemars.workspace = true
eyre.workspace = true
futures.workspace = true
reqwest.workspace = true
either.workspace = true
derive_more.workspace = true
async-trait.workspace = true
tryhcs_shared = {path = "../tryhcs_shared"}
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.1", features = ["serde", "v4"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.1", features = ["serde", "v4", "js"] }
sqlite-wasm-rs = { version = "0.3", default-features = false, features = ["precompiled"] }
