[package]
name = "tryhcs_app"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
bon.workspace = true
schemars.workspace = true
eyre.workspace = true
futures.workspace = true
either.workspace = true
derive_more.workspace = true
async-trait.workspace = true
tryhcs_shared = {path = "../tryhcs_shared"}
tracing.workspace = true
reqwest = { version = "0.12.15", features = [] }
ts-rs.workspace = true
erased-serde = "0.4.6"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.1", features = ["serde", "v4"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
sled = "0.34.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.1", features = ["serde", "v4", "js"] }
gloo-storage = "0.3.0"
wasm-bindgen = "0.2.100"
# gloo-net = {version = "0.6.0", features= ["http"]}
serde-wasm-bindgen = "0.6.5"
gloo-utils = { version = "0.2", features = ["serde"] }
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"


[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = "0.3.0"
