[package]
name = "tryhcs_shared"
version = "0.0.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
# uuid.workspace = true
bon.workspace = true
schemars.workspace = true
eyre.workspace = true
futures.workspace = true
reqwest.workspace = true
either.workspace = true
derive_more.workspace = true
async-trait.workspace = true


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.1", features = ["serde", "v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.1", features = ["serde", "v4", "js"] }
